--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- Preload all the images -->
     <title>The Pirate Resurrect</title>
   </head>
-  <body>
+  <body id="app-body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
